--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,30 @@
 services:
   reverse-proxy:
-    # The official v3 Traefik docker image
     image: traefik:v3.3
-    # Enables the web UI and tells Traefik to listen to docker
-    command: --api.insecure=true --providers.docker
+    command:
+      - "--api.insecure=true"
+      - "--providers.docker"
+      - "--accesslog=true"
+      - "--accesslog.filepath=/dev/stdout"
+      - "--accesslog.format=json"
+      #- "--accesslog.filters.statusCodes=400-499,500-599"
+      #- "--accesslog.filters.retryAttempts=true"
+      #- "--accesslog.filters.minDuration=10ms"
     ports:
-      # The HTTP port
       - "80:80"
-      # The Web UI (enabled by --api.insecure=true)
       - "8080:8080"
     volumes:
-      # So that Traefik can listen to the Docker events
       - /var/run/docker.sock:/var/run/docker.sock
+    labels:
+      # Middleware para agregar encabezados de tracking
+      - "traefik.http.middlewares.req-headers.headers.customrequestheaders.X-Request-ID=requestid"
+      - "traefik.http.middlewares.req-headers.headers.customrequestheaders.X-Trace-Time=responsetime"
+
   whoami:
-    # A container that exposes an API to show its IP address
     image: traefik/whoami
     labels:
       - "traefik.http.routers.whoami.rule=Host(`whoami.docker.localhost`)"
+      - "traefik.http.routers.whoami.middlewares=req-headers"
 
   backend:
     build:
@@ -26,6 +34,7 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.backend.rule=Host(`backend.docker.localhost`)"
+      - "traefik.http.routers.backend.middlewares=req-headers"
       - "traefik.http.services.backend.loadbalancer.server.port=3000"
 
   nginx:
@@ -38,4 +47,5 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.nginx.rule=Host(`nginx.docker.localhost`)"
+      - "traefik.http.routers.nginx.middlewares=req-headers"
       - "traefik.http.services.nginx.loadbalancer.server.port=80"
