usuario y contraseña alex

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,12 +19,17 @@ services:
       # Middleware para agregar encabezados de tracking
       - "traefik.http.middlewares.req-headers.headers.customrequestheaders.X-Request-ID=requestid"
       - "traefik.http.middlewares.req-headers.headers.customrequestheaders.X-Trace-Time=responsetime"
+      - "traefik.http.middlewares.test-auth.basicauth.users=alex:$$2y$$05$$pEfyQFy5gONDUHId6qvbz.WHha5CP8mMtS.FISGnjH.FpaIV8Kju2"
+      - "traefik.http.routers.app.middlewares=ratelimiter"
+      # Middleware para limitación de velocidad
+      - "traefik.http.middlewares.ratelimiter.ratelimit.average=10"  # 10 solicitudes por segundo
+      - "traefik.http.middlewares.ratelimiter.ratelimit.burst=20"    # Se permite una ráfaga de hasta 20 solicitudes
 
   whoami:
     image: traefik/whoami
     labels:
       - "traefik.http.routers.whoami.rule=Host(`whoami.docker.localhost`)"
-      - "traefik.http.routers.whoami.middlewares=req-headers"
+      - "traefik.http.routers.whoami.middlewares=test-auth,req-headers"
 
   backend:
     build:
@@ -34,8 +39,8 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.backend.rule=Host(`backend.docker.localhost`)"
-      - "traefik.http.routers.backend.middlewares=req-headers"
       - "traefik.http.services.backend.loadbalancer.server.port=3000"
+      - "traefik.http.routers.backend.middlewares=test-auth,req-headers"
 
   nginx:
     image: nginx:alpine
@@ -47,5 +52,5 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.nginx.rule=Host(`nginx.docker.localhost`)"
-      - "traefik.http.routers.nginx.middlewares=req-headers"
+      - "traefik.http.routers.nginx.middlewares=test-auth,req-headers"
       - "traefik.http.services.nginx.loadbalancer.server.port=80"
