--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,7 +34,8 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.backend.rule=Host(`api.localhost`)"
-      - "traefik.http.services.backend.loadbalancer.server.port=3000"
+      - "traefik.http.services.backend-service.loadbalancer.server.port=3000"
+      - "traefik.http.routers.backend.service=backend-service"
       - "traefik.http.routers.backend.middlewares=test-auth,req-headers,error-pages"
 
   backend-replica-1:
@@ -44,9 +45,10 @@ services:
     restart: unless-stopped
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.backend-replica-1.rule=Host(`api.localhost`)"
-      - "traefik.http.services.backend.loadbalancer.server.port=3000"
-      - "traefik.http.routers.backend-replica-1.middlewares=test-auth,req-headers,error-pages"
+      - "traefik.http.routers.backend.rule=Host(`api.localhost`)"
+      - "traefik.http.services.backend-service.loadbalancer.server.port=3000"
+      - "traefik.http.routers.backend.service=backend-service"
+      - "traefik.http.routers.backend.middlewares=test-auth,req-headers,error-pages"
 
   backend-replica-2:
     build:
@@ -55,9 +57,10 @@ services:
     restart: unless-stopped
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.backend-replica-2.rule=Host(`api.localhost`)"
-      - "traefik.http.services.backend.loadbalancer.server.port=3000"
-      - "traefik.http.routers.backend-replica-2.middlewares=test-auth,req-headers,error-pages"
+      - "traefik.http.routers.backend.rule=Host(`api.localhost`)"
+      - "traefik.http.services.backend-service.loadbalancer.server.port=3000"
+      - "traefik.http.routers.backend.service=backend-service"
+      - "traefik.http.routers.backend.middlewares=test-auth,req-headers,error-pages"
 
   prometheus:
     image: prom/prometheus
