--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,21 @@
 services:
   reverse-proxy:
     image: traefik:v2.10
-    command:
-      - "--api.insecure=true"
-      - "--providers.docker"
-      - "--accesslog=true"
-      - "--accesslog.filepath=/dev/stdout"
-      - "--accesslog.format=json"
+    container_name: traefik
     ports:
       - "80:80"
       - "8080:8080"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-    labels:
-      - "traefik.http.middlewares.req-headers.headers.customrequestheaders.X-Request-ID=requestid"
-      - "traefik.http.middlewares.req-headers.headers.customrequestheaders.X-Trace-Time=responsetime"
-      - "traefik.http.middlewares.test-auth.basicauth.users=alex:$$2y$$05$$pEfyQFy5gONDUHId6qvbz.WHha5CP8mMtS.FISGnjH.FpaIV8Kju2"
-      - "traefik.http.middlewares.error-pages.errors.status=404-500"
-      - "traefik.http.middlewares.error-pages.errors.service=nginx"
-      - "traefik.http.middlewares.error-pages.errors.query=/error.html"
+      - ./traefik/traefik.yml:/etc/traefik/traefik.yml
+      - ./traefik/middlewares.yml:/etc/traefik/dynamic/middlewares.yml
 
   whoami:
     image: traefik/whoami
     labels:
+      - "traefik.enable=true"
       - "traefik.http.routers.whoami.rule=Host(`whoami.docker.localhost`)"
-      - "traefik.http.routers.whoami.middlewares=test-auth,req-headers"
+      - "traefik.http.routers.whoami.middlewares=test-auth@file,req-headers@file"
 
   backend:
     build:
@@ -36,7 +27,7 @@ services:
       - "traefik.http.routers.backend.rule=Host(`api.localhost`)"
       - "traefik.http.services.backend-service.loadbalancer.server.port=3000"
       - "traefik.http.routers.backend.service=backend-service"
-      - "traefik.http.routers.backend.middlewares=test-auth,req-headers,error-pages"
+      - "traefik.http.routers.backend.middlewares=test-auth@file,req-headers@file,error-pages@file"
 
   backend-replica-1:
     build:
@@ -48,7 +39,7 @@ services:
       - "traefik.http.routers.backend.rule=Host(`api.localhost`)"
       - "traefik.http.services.backend-service.loadbalancer.server.port=3000"
       - "traefik.http.routers.backend.service=backend-service"
-      - "traefik.http.routers.backend.middlewares=test-auth,req-headers,error-pages"
+      - "traefik.http.routers.backend.middlewares=test-auth@file,req-headers@file,error-pages@file"
 
   backend-replica-2:
     build:
@@ -60,7 +51,7 @@ services:
       - "traefik.http.routers.backend.rule=Host(`api.localhost`)"
       - "traefik.http.services.backend-service.loadbalancer.server.port=3000"
       - "traefik.http.routers.backend.service=backend-service"
-      - "traefik.http.routers.backend.middlewares=test-auth,req-headers,error-pages"
+      - "traefik.http.routers.backend.middlewares=test-auth@file,req-headers@file,error-pages@file"
 
   prometheus:
     image: prom/prometheus
